@@ -1,5 +1,9 @@
 2002-03-28  Richard Hestilow  <hestilow@ximian.com>
 
+	* applier.c (bg_applier_set_prop): Only set size for preview modes.
+
+2002-03-28  Richard Hestilow  <hestilow@ximian.com>
+
 	* applier.c (MONITOR_CONTENTS_WIDTH, MONITOR_CONTENTS_HEIGHT):
 	Rename to _DEFAULT_WIDTH, _DEFAULT_HEIGHT.
 	(draw_disabled_message): Accept width and height as variables.
